Stop index footer wrapping

--- a/resources/main.css
+++ b/resources/main.css
@@ -110,7 +110,7 @@ li {
 }
 
 .footer {
-  width:120px;
+  width:131px;
   margin-left: auto;
   margin-right: auto;
 }
